Updated Translatable validators